# resilio-sync-cli

./: Pipfile  README.md  pyproject.toml  rslapi.py  rslctl  rslctl.py
