[tool.poetry]
name = "resilio-sync-cli"
version = "0.1.0"
description = "A command line interface for Resilio Sync"
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
lxml = "^4.4"
bs4 = "^0.0.1"
appdirs = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
